Closed Bug 414392 Opened 17 years ago Closed 17 years ago

Missing include for strncmp in uxproces.c

Categories

(NSPR :: NSPR, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: kinetik, Assigned: wtc)

Details

Attachments

(1 file)

GCC is emitting the following warning with the latest version of NSPR:

mozilla/nsprpub/pr/src/md/unix/uxproces.c: In function ‘ForkAndExec’:
mozilla/nsprpub/pr/src/md/unix/uxproces.c:209: warning: implicit declaration of function ‘strncmp’
Attached patch trivial fixSplinter Review
Add string.h include so a prototype for strncmp is available.
Attachment #299792 - Flags: review?(wtc)
Comment on attachment 299792 [details] [diff] [review]
trivial fix

r=wtc.  Thank you very much.  I will check this in later today.
Attachment #299792 - Flags: review?(wtc) → review+
I checked in the patch.

Checking in uxproces.c;
/cvsroot/mozilla/nsprpub/pr/src/md/unix/uxproces.c,v  <--  uxproces.c
new revision: 3.22; previous revision: 3.21
done

I will create a new NSPR tag for the Mozilla trunk later.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → 4.7
Version: other → 4.7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: