Bug 414392: include <string.h> for strncmp.  The patch is contributed by Matthew Gregan <kinetik@flim.org>.  r=wtc